# django-snacks

./: db.sqlite3  pyproject.toml
snacks_project/: settings.py
templates/: base.html
